crates/ruff_python_parser/tests/snapshots/invalid_syntax@lazy_import_invalid_from_py315.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/lazy_import_invalid_from_py315.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..146,
        body: [
            ImportFrom(
                StmtImportFrom {
                    node_index: NodeIndex(None),
                    range: 49..65,
                    module: Some(
                        Identifier {
                            id: Name("os"),
                            range: 54..56,
                            node_index: NodeIndex(None),
                        },
                    ),
                    names: [
                        Alias {
                            range: 64..65,
                            node_index: NodeIndex(None),
                            name: Identifier {
                                id: Name("*"),
                                range: 64..65,
                                node_index: NodeIndex(None),
                            },
                            asname: None,
                        },
                    ],
                    level: 0,
                    is_lazy: false,
                },
            ),
            ImportFrom(
                StmtImportFrom {
                    node_index: NodeIndex(None),
                    range: 71..105,
                    module: Some(
                        Identifier {
                            id: Name("__future__"),
                            range: 76..86,
                            node_index: NodeIndex(None),
                        },
                    ),
                    names: [
                        Alias {
                            range: 94..105,
                            node_index: NodeIndex(None),
                            name: Identifier {
                                id: Name("annotations"),
                                range: 94..105,
                                node_index: NodeIndex(None),
                            },
                            asname: None,
                        },
                    ],
                    level: 0,
                    is_lazy: false,
                },
            ),
            FunctionDef(
                StmtFunctionDef {
                    node_index: NodeIndex(None),
                    range: 107..145,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("func"),
                        range: 111..115,
                        node_index: NodeIndex(None),
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 115..117,
                        node_index: NodeIndex(None),
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        ImportFrom(
                            StmtImportFrom {
                                node_index: NodeIndex(None),
                                range: 128..145,
                                module: Some(
                                    Identifier {
                                        id: Name("sys"),
                                        range: 133..136,
                                        node_index: NodeIndex(None),
                                    },
                                ),
                                names: [
                                    Alias {
                                        range: 144..145,
                                        node_index: NodeIndex(None),
                                        name: Identifier {
                                            id: Name("*"),
                                            range: 144..145,
                                            node_index: NodeIndex(None),
                                        },
                                        asname: None,
                                    },
                                ],
                                level: 0,
                                is_lazy: false,
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | # parse_options: {"target-version": "3.15"}
2 | lazy from os import *
  | ^^^^ Syntax Error: Expected a statement
3 | lazy from __future__ import annotations
  |


  |
1 | # parse_options: {"target-version": "3.15"}
2 | lazy from os import *
3 | lazy from __future__ import annotations
  | ^^^^ Syntax Error: Expected a statement
4 |
5 | def func():
  |


  |
5 | def func():
6 |     lazy from sys import *
  |     ^^^^ Syntax Error: Expected a statement
  |


## Semantic Syntax Errors

  |
1 | # parse_options: {"target-version": "3.15"}
2 | lazy from os import *
3 | lazy from __future__ import annotations
  |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Syntax Error: __future__ imports must be at the top of the file
4 |
5 | def func():
  |


  |
5 | def func():
6 |     lazy from sys import *
  |          ^^^^^^^^^^^^^^^^^ Syntax Error: `from sys import *` only allowed at module level
  |
