crates/ruff_python_parser/tests/snapshots/invalid_syntax@lazy_import_stmt_py314.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/lazy_import_stmt_py314.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..85,
        body: [
            Import(
                StmtImport {
                    node_index: NodeIndex(None),
                    range: 49..59,
                    names: [
                        Alias {
                            range: 56..59,
                            node_index: NodeIndex(None),
                            name: Identifier {
                                id: Name("foo"),
                                range: 56..59,
                                node_index: NodeIndex(None),
                            },
                            asname: None,
                        },
                    ],
                    is_lazy: false,
                },
            ),
            ImportFrom(
                StmtImportFrom {
                    node_index: NodeIndex(None),
                    range: 65..84,
                    module: Some(
                        Identifier {
                            id: Name("bar"),
                            range: 70..73,
                            node_index: NodeIndex(None),
                        },
                    ),
                    names: [
                        Alias {
                            range: 81..84,
                            node_index: NodeIndex(None),
                            name: Identifier {
                                id: Name("baz"),
                                range: 81..84,
                                node_index: NodeIndex(None),
                            },
                            asname: None,
                        },
                    ],
                    level: 0,
                    is_lazy: false,
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | # parse_options: {"target-version": "3.14"}
2 | lazy import foo
  | ^^^^ Syntax Error: Expected a statement
3 | lazy from bar import baz
  |


  |
1 | # parse_options: {"target-version": "3.14"}
2 | lazy import foo
3 | lazy from bar import baz
  | ^^^^ Syntax Error: Expected a statement
  |
